--- a/ css/styles.css
+++ b/ css/styles.css
@@ -109,6 +109,7 @@ img {
 
 .nav-item {
   display: block;
+  position: relative;
 
   font-family: var(--font-family-roboto);
   font-style: normal;
@@ -121,6 +122,15 @@ img {
 
 .nav-item:not(:last-child) {
   margin-right: 50px;
+}
+
+.nav-item:hover,
+.nav-item:focus,
+.nav-item:link {
+  content: '';
+  display: block;
+  color: var(--accent-color);
+  opacity: 1;
 }
 
 .nav-main {
@@ -203,20 +213,32 @@ img {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  padding: 32px 0;
 }
 
-.link-header::after {
+.link-header.active-link-header::after {
   content: '';
   display: block;
   position: absolute;
   width: 100%;
   height: 4px;
-  color: #2196f3;
+  left: 0;
+  bottom: 0;
+  background-color: var(--accent-color);
+  opacity: 1;
+  height: 4px;
+
   border-radius: 2px;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-header:hover,
 .link-header:focus {
+  opacity: 1;
   color: var(--accent-color);
 }
 
@@ -526,28 +548,45 @@ img {
 }
 
 .product-item-thumb {
-  display: flex;
+  display: block;
   position: relative;
+  overflow: hidden;
 }
 
-.product-item-thumb-p {
-  display: flex;
+.product-item-thumb::before {
+  display: inline-block;
+  content: '';
   position: absolute;
   top: 0;
-  width: 370px;
-  height: 294px;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
+
+  opacity: 1;
+
+  transform: translateY(+100%);
 
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.product-item-thumb-p:hover {
-  opacity: 1;
+.product-item-thumb:hover.product-item-thumb::before {
+  transform: translateY(0);
 }
+.product-item-overlay-text {
+  position: absolute;
+  display: block;
+  width: 370px;
+  height: 294px;
+  left: 0;
+  bottom: 0;
+  padding: 63px 24px;
 
-.product-item-p-text {
+  transform: translateY(+100%);
+  transition: transform 250ms;
+
   font-family: var(--font-family-roboto);
   font-style: normal;
   font-weight: normal;
@@ -555,7 +594,10 @@ img {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--primary-text-color-white);
-  padding: 63px 24px;
+}
+
+.product-item-thumb:hover .product-item-overlay-text {
+  transform: translateY(0);
 }
 
 .prtfl-card-title {
@@ -703,4 +745,57 @@ h6,
 p,
 ul {
   margin: 0;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  min-width: 528px;
+  min-height: 581px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 1px 0px #00000033;
+  box-shadow: 0px 1px 1px 0px #00000024;
+  box-shadow: 0px 1px 3px 0px #0000001f;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button-close-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.icon-close-modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  opacity: 1;
+  background: var(--primary-background-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
